Archive2/72/1424de3e284e85/output
main.cpp:9:9: error: cannot initialize a variable of type 'int' with an lvalue of type 'auto'
    int f1 = F<int>; // error: cannot initialize a variable of type 'int' with an lvalue of type 'auto'
        ^    ~~~~~~
main.cpp:12:5: error: static_assert failed "Jabberwocky is killing user."
    static_assert(std::is_same<int, decltype(F<int>)>::value, "Jabberwocky is killing user.");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
